# GoogleNewsScraper

./: .gitIgnore  Dockerfile  README.md  data.json  pyproject.toml  pytest.ini  raw_html.html  raw_html.json  requirements.txt
.devcontainer/: devcontainer.json  set_display.sh
Tests/: test_GoogleNews.py  test_google_news.py
app/: ApiTest.py  MyGoogleNews3.py  Webdriver.py  __init__.py  __init__2.py  capmonster.py  google_news_webscrap.py  main.py  test.py
data/: merck_Feb2020.txt
