[tool.poetry]
name = "googlenews"
version = "0.1.0"
description = "Webscrapping GoogleNews"
authors = ["Jesus T"]
license = "MIT"
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "3.11.10"
beautifulsoup4 = "^4.12.3"
dateparser = "^1.2.0"
python-dateutil = "^2.9.0.post0"
urllib3 = "^2.2.3"
requests = "^2.32.3"
fake-useragent = "^1.5.1"
selenium = "^4.25.0"
selenium-stealth = "^1.0.6"
webdriver-manager = "^4.0.2"
capmonstercloudclient = "^1.5.0"
logging = "^0.4.9.6"
pandas = "^2.2.3"
numpy = "2.0.2"
nltk = "^3.9.1"
asyncio = "^3.4.3"
spacy = "^3.8.2"
black = "^24.10.0"
pylint = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
